--- a/public/css/register.css
+++ b/public/css/register.css
@@ -76,6 +76,7 @@ body h5 {
     border-radius: 10px;
     background: linear-gradient(#38b6ff, white, #38b6ff);
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .login-link {
@@ -91,7 +92,7 @@ body h5 {
 }
 
 footer {
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
