--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -9,10 +9,10 @@
         <%- include('../partials/header') %>
             <main>
                 <div class="register-form">
-                    <h5>Registro</h5>
+                   
 
-                    <form autocomplete="off">
-
+                    <form autocomplete="off" style="min-height: 80vh">
+                        <h5>Registro</h5>
                         <i class='bx bxs-user' style="color:white"></i> <input class="inputs" type="text" name="name"
                             placeholder="Ingrese su nombre" required>
 
