--- a/public/css/register.css
+++ b/public/css/register.css
@@ -14,7 +14,8 @@
     justify-content: center;
 }
 
-body {
+html, body {
+    height: 100%;
     display: flex;
     flex-direction: column;
 
@@ -91,8 +92,4 @@ body h5 {
     text-decoration: none;
 }
 
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
+
