Cambio en links de los formularios

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -30,7 +30,7 @@
                         <i class='bx bxs-lock-open' style="color:white"></i>
                         <input class="inputs" type="password" name="confirmPassword"
                             placeholder="Vuelva a ingresar su contraseña" required>
-                        <a class='login-link' href="http://localhost:3000/login">Ya tengo una cuenta</a>
+                        <a class='login-link' href="/login">Ya tengo una cuenta</a>
                         <div class="interaction-button">
                             <button type="submit">Enviar</button>
                         </div>
