--- a/public/css/login.css
+++ b/public/css/login.css
@@ -25,8 +25,8 @@ body h5 {
     text-align: center;
     margin-top: 10px;
     font-size: 25px;
-    color: #0767D5;
-    margin-bottom: 10px;
+    color: white;
+    margin-bottom: 40px;
     position: relative;
 }
 
@@ -45,6 +45,7 @@ body h5 {
 }
 
 .log-form .inputs {
+    background-color: transparent;
     font-size: 15px;
     display: flex;
     justify-content: center;
@@ -52,18 +53,19 @@ body h5 {
     flex-direction: column;
     flex-wrap: nowrap;
     padding: 10px;
-    margin: 20px;
-    margin-bottom: 40px;
+    margin: auto;
+    margin-bottom: 50px;
     border: none;
     outline: none;
-    border-bottom: 2px solid #0767D5;
-    color: #0767D5;
+    border-bottom: 2px solid white;
+    color: white;
+    
 
 }
 
 .log-form .inputs::placeholder {
     font-size: 15px;
-    color: #0767D5;
+    color: white;
 }
 
 .log-form .interaction-button button {
@@ -81,21 +83,27 @@ body h5 {
     background: linear-gradient(#38b6ff, white, #38b6ff);
     cursor: pointer;
     margin-bottom: 10px;
+    margin-top: 15px;
 }
 
 .log-links {
     
     display: flex;
     flex-direction: column;
-    margin: 10px;
-    color: #38b6ff;
+    margin-top: 30px;
+    color: white;
     text-decoration: none;
 }
 
 .log-links a {
     font-size: 20px;
     margin-bottom: 15px;
-    color: #38b6ff;
+    color: white;
     text-decoration: none;
 }
 
+.bg-color {
+    
+    background-color: #0767D5;
+    border-radius: 15px;
+}
