--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,19 +12,21 @@
 
 
                     <form autocomplete="off" style="min-height: 80vh">
-                        <h5>Acceder</h5>
-                        <i class='bx bxs-envelope' style="color:white"></i>
-                        <input class="inputs" type="email" name="email" placeholder="Ingrese su email" required>
+                        <div class="bg-color">
+                            <h5>Acceder</h5>
+                            <i class='bx bxs-envelope' style="color:white"></i>
+                            <input class="inputs" type="email" name="email" placeholder="Ingrese su email" required>
 
-                        <i class='bx bxs-lock-open' style="color:white"></i>
-                        <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña"
-                            required>
-                        <div class="log-links">
-                            <a class='register-link' href="/register">Todavía no tengo una cuenta</a>
-                            <a class='forget-link' href="#">Olvidé mi contraseña</a>
-                        </div>
-                        <div class="interaction-button">
-                            <button type="submit">Enviar</button>
+                            <i class='bx bxs-lock-open' style="color:white"></i>
+                            <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña"
+                                required>
+                            <div class="log-links">
+                                <a class='register-link' href="/register">Todavía no tengo una cuenta</a>
+                                <a class='forget-link' href="#">Olvidé mi contraseña</a>
+                            </div>
+                            <div class="interaction-button">
+                                <button type="submit">Enviar</button>
+                            </div>
                         </div>
                 </div>
                 </form>
