--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -9,33 +9,35 @@
         <%- include('../partials/header') %>
             <main>
                 <div class="register-form">
-                   
+
 
                     <form autocomplete="off" style="min-height: 80vh">
-                        <h5>Registro</h5>
-                        <i class='bx bxs-user' style="color:white"></i> <input class="inputs" type="text" name="name"
-                            placeholder="Ingrese su nombre" required>
+                        <div class="bg-color">
+                            <h5>Registro</h5>
+                            <i class='bx bxs-user' style="color:white"></i> <input class="inputs" type="text"
+                                name="name" placeholder="Ingrese su nombre" required>
 
 
-                        <i class='bx bxs-user' style="color:white"></i> <input class="inputs" type="text" name="surname"
-                            placeholder="Ingrese su apellido" required>
+                            <i class='bx bxs-user' style="color:white"></i> <input class="inputs" type="text"
+                                name="surname" placeholder="Ingrese su apellido" required>
 
-                        <i class='bx bxs-envelope' style="color:white"></i>
-                        <input class="inputs" type="email" name="email" placeholder="Ingrese su email" required>
+                            <i class='bx bxs-envelope' style="color:white"></i>
+                            <input class="inputs" type="email" name="email" placeholder="Ingrese su email" required>
 
-                        <i class='bx bxs-lock-open' style="color:white"></i>
-                        <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña"
-                            required>
+                            <i class='bx bxs-lock-open' style="color:white"></i>
+                            <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña"
+                                required>
 
-                        <i class='bx bxs-lock-open' style="color:white"></i>
-                        <input class="inputs" type="password" name="confirmPassword"
-                            placeholder="Vuelva a ingresar su contraseña" required>
-                        <a class='login-link' href="/login">Ya tengo una cuenta</a>
-                        <div class="interaction-button">
-                            <button type="submit">Enviar</button>
+                            <i class='bx bxs-lock-open' style="color:white"></i>
+                            <input class="inputs" type="password" name="confirmPassword"
+                                placeholder="Vuelva a ingresar su contraseña" required>
+                            <a class='login-link' href="/login">Ya tengo una cuenta</a>
+                            <div class="interaction-button">
+                                <button type="submit">Enviar</button>
+                            </div>
                         </div>
                 </div>
                 </form>
 
 
-                <%- include('../partials/footer')  %>
+                <%- include('../partials/footer') %>
