Validación de formulario de registro

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
 
 
         <div class="user-links">
-            <a class="user"href="/login">INICIA SESION <i class="fa-solid fa-user"></i></a>
+            <a class="user"href="/user/login">INICIA SESION <i class="fa-solid fa-user"></i></a>
             <a href="/product-cart">CARRITO <i class="fa-solid fa-cart-shopping"></i></a>
         </div>
 
