--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -21,7 +21,7 @@
                             <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña"
                                 required>
                             <div class="log-links">
-                                <a class='register-link' href="/register">Todavía no tengo una cuenta</a>
+                                <a class='register-link' href="/user/register">Todavía no tengo una cuenta</a>
                                 <a class='forget-link' href="#">Olvidé mi contraseña</a>
                             </div>
                             <div class="interaction-button">
