--- a/public/css/register.css
+++ b/public/css/register.css
@@ -100,3 +100,13 @@ body h5 {
     background-color: #0767D5;
     border-radius: 15px;
 }
+
+.text-danger {
+    position: relative;
+    bottom: 30px;
+    color:  red;
+    font-weight: 600;
+    width: 90%;
+    margin: auto;
+
+}
