--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -11,27 +11,75 @@
                 <div class="register-form">
 
 
-                    <form autocomplete="off" style="min-height: 80vh">
+                    <form method="POST" action='/user/register' autocomplete="off" style="min-height: 80vh">
                         <div class="bg-color">
                             <h5>Registro</h5>
-                            <i class='bx bxs-user' style="color:white"></i> <input class="inputs" type="text"
-                                name="name" placeholder="Ingrese su nombre" required>
+                            <i class='bx bxs-user' style="color:white"></i> 
+                            <input 
+                                    placeholder="Ingrese su nombre"
+									type="text" 
+                            name="fullName" 
+                            class="inputs <%= locals.errors && errors.fullName ? 'is-invalid' : null %>"
+                            value="<%= locals.oldData ? oldData.fullName : null %>"
+                        >
+                        <% if (locals.errors && errors.fullName) { %>
+                            <div class="text-danger">
+                                <i class="fa-solid fa-circle-exclamation"></i>
+                                <%= errors.fullName.msg %> 
+                            </div>
+                        <% } %>
+                            
+                            
+                            
 
 
-                            <i class='bx bxs-user' style="color:white"></i> <input class="inputs" type="text"
-                                name="surname" placeholder="Ingrese su apellido" required>
+                            <i class='bx bxs-user' style="color:white"></i> <input 
+                            placeholder="Ingrese su apellido"
+                            type="text" 
+                            name="surname" 
+                            class="inputs <%= locals.errors && errors.surname ? 'is-invalid' : null %>"
+                            value="<%= locals.oldData ? oldData.surname : null %>"
+                        >
+                        <% if (locals.errors && errors.surname) { %>
+                            <div class="text-danger">
+                                <i class="fa-solid fa-circle-exclamation"></i>
+                                <%= errors.surname.msg %> 
+                            </div>
+                        <% } %>
 
                             <i class='bx bxs-envelope' style="color:white"></i>
-                            <input class="inputs" type="email" name="email" placeholder="Ingrese su email" required>
+                            <input 
+                                    placeholder="Ingrese su email"
+									type="text" 
+									name="email" 
+									class="inputs <%= locals.errors && errors.email ? 'is-invalid' : null %>"
+									value="<%= locals.oldData ? oldData.email : null %>"
+								>
+								<% if (locals.errors && errors.email) { %>
+									<div class="text-danger">
+                                        <i class="fa-solid fa-circle-exclamation"></i>	<%= errors.email.msg %>
+									</div>
+								<% } %>
 
                             <i class='bx bxs-lock-open' style="color:white"></i>
-                            <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña"
-                                required>
+                            <input 
+                                    placeholder="Ingrese su contraseña"
+									type="password" 
+									name="password" 
+									class="inputs <%= locals.errors && errors.password ? 'is-invalid' : null %>"
+								>
+								<% if (locals.errors && errors.password) { %>
+									<div class="text-danger">
+                                        <i class="fa-solid fa-circle-exclamation"></i>
+										<%= errors.password.msg %>
+									</div>
+								<% } %>
 
-                            <i class='bx bxs-lock-open' style="color:white"></i>
+                            <!-- <i class='bx bxs-lock-open' style="color:white"></i>
                             <input class="inputs" type="password" name="confirmPassword"
-                                placeholder="Vuelva a ingresar su contraseña" required>
-                            <a class='login-link' href="/login">Ya tengo una cuenta</a>
+                                placeholder="Vuelva a ingresar su contraseña" required> -->
+                            
+                                <a class='login-link' href="/user/login">Ya tengo una cuenta</a>
                             <div class="interaction-button">
                                 <button type="submit">Enviar</button>
                             </div>
