--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -11,22 +11,33 @@
                 <div class="log-form">
 
 
-                    <form autocomplete="off" style="min-height: 80vh">
+                    <form method="POST" action='/user/login' autocomplete="off" style="min-height: 80vh">
                         <div class="bg-color">
                             <h5>Acceder</h5>
                             <i class='bx bxs-envelope' style="color:white"></i>
-                            <input class="inputs" type="email" name="email" placeholder="Ingrese su email" required>
+                            <input class="inputs" type="email" name="email" placeholder="Ingrese su email">
+                            <% if (locals.errors && errors.email) { %>
+                                <div class="text-danger">
+                                    <%= errors.email.msg %>
+                                </div>
+                                <% } %>
+                                    <i class='bx bxs-lock-open' style="color:white"></i>
+                                    <input class="inputs" type="password" name="password"
+                                        placeholder="Ingrese su contraseña">
+                                        <div class="checkbox">
 
-                            <i class='bx bxs-lock-open' style="color:white"></i>
-                            <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña"
-                                required>
-                            <div class="log-links">
-                                <a class='register-link' href="/user/register">Todavía no tengo una cuenta</a>
-                                <a class='forget-link' href="#">Olvidé mi contraseña</a>
-                            </div>
-                            <div class="interaction-button">
-                                <button type="submit">Enviar</button>
-                            </div>
+                                            <input type="checkbox" name="remember_user">
+                                            <label for="remember_user" class="remember_user">Recordarme</label>
+                                        </div>
+                                    <div class="log-links">
+                                        <a class='register-link' href="/user/register">Todavía no tengo una cuenta</a>
+                                        <a class='forget-link' href="#">Olvidé mi contraseña</a>
+                                        
+                                        
+                                    </div>
+                                    <div class="interaction-button">
+                                        <input type="submit"></input>
+                                    </div>
                         </div>
                 </div>
                 </form>
