--- a/views/products/productCart.ejs
+++ b/views/products/productCart.ejs
@@ -4,10 +4,10 @@
     <title>Carrito de compras</title>
     </head>
 
-    <body>
-
         <!-- HEADER  -->
         <%- include('../partials/header') %>
+    <body>
+
 
             <main>
                 <div class="products-container">
@@ -23,7 +23,7 @@
                                     <p>PRECIO $16.999</p>
                                 </div>
                             </div>
-                            <a href="#"><button class="delete-button">ELIMINAR EL PRODUCTO</button></a>
+                            <input class="delete-button" value="ELIMINAR EL PRODUCTO"></input>
                         </div>
 
                         <div class="product">
@@ -35,14 +35,14 @@
                                     <p>PRECIO $16.999</p>
                                 </div>
                             </div>
-                            <a href="#"><button class="delete-button">ELIMINAR EL PRODUCTO</button></a>
+                            <input class="delete-button" value="ELIMINAR EL PRODUCTO"></input>
                         </div>
 
                         <div class="product" id="buy-zone">
                             <p>PRECIO TOTAL DE LOS ARTÍCULOS: <strong>$33.998</strong></p>
                             <p>PRECIO DE ENVÍO: <strong>$1.299</strong></p>
                             <p>PRECIO TOTAL: <strong>$35.297</strong></p>
-                            <a href="#"><button class="delete-button">PROCEDER A PAGAR</button></a>
+                            <input class="delete-button" value="PROCEDER A PAGAR"></input>
 
                         </div>
 
@@ -51,7 +51,8 @@
 
                 </div>
 
-                
-            </main>
 
+            </main>
+ <!-- FOOTER  -->
+ <%- include('../partials/footer') %>
 
