--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -1,15 +1,15 @@
 <!-- HEAD  -->
 <%- include('../partials/head') %>
 
-    <link href="/css/productCreate.css" rel="stylesheet">
-    <title>Creación de producto</title>
+    <link href="/css/productEdit.css" rel="stylesheet">
+    <title>Edición de producto</title>
     </head>
 
     <body>
         
             <main>
                 <div class="formBox">
-                    <h5>Crear producto</h5>
+                    <h5>Editar producto</h5>
 
                     <form action="/products" method="POST" autocomplete="off">
 
@@ -44,7 +44,7 @@
 
                         <textarea name="description" class="textarea" placeholder="Edita la descripcion del producto"></textarea>
 
-                        <button type="submit" class="buttons">Crear</button>
+                        <button type="submit" class="buttons">Editar</button>
 
                     </form>
                 </div>
