--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,25 +7,21 @@
         <button type="submit"><i class="fa fa-search"></i></button>
     </form>
 
-    <ul class="navbar-nav align-items-center">
+    <ul class="navbarUserLogged">
         <% if (locals.isLogged) { %>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropUser" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="/images/avatars/<%= locals.userLogged.avatar %>" width="40" style="border-radius: 100%;">
-                    Hi <%= locals.userLogged.fullName %> 
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/user/profile">My profile</a>
-                    <li><hr class="dropdown-divider"></li>
-                    <a class="dropdown-item" href="/user/logout">Logout</a>
-                </ul>
-            </li>
-        <% } else { %>
-        <div class="user-links">
-            <a class="user" href="/user/login">INICIA SESION<i class="fa-solid fa-user"></i></a>
-            <a href="/user/register">REGISTRATE<i class="fa-solid fa-user"></i></a>
-        </div>
-        <% } %>
+            <ul class="nav-loggedOptions">
+                <a style="color: white;">Hi <%= locals.userLogged.fullName %></a>
+                <a href="/user/profile">My profile</a>
+                <a href="/user/logout">Logout</a>
+            </ul>
+
+
+            <% } else { %>
+                <div class="user-links">
+                    <a class="user" href="/user/login">INICIA SESION<i class="fa-solid fa-user"></i></a>
+                    <a href="/user/register">REGISTRATE<i class="fa-solid fa-user"></i></a>
+                </div>
+                <% } %>
     </ul>
 
 
