--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,108 @@
-<%- include('partials/head')  %>
-
-  <title>CamisetasML</title> 
-</head>
-
-<body>
-  
-  <!-- HEADER  -->
-  <%- include('partials/header')  %>
+<%- include('partials/head') %>
 
 
 
+  <title>CamisetasML</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER  -->
+    <%- include('partials/header') %>
+
+
+      <main>
 
 
 
+        <h2>CAMISETAS DE FÚTBOL</h2>
+
+        <div class="footballProduct">
+          <h6>CAMISETA SELECCIÓN ARGENTINA EDICIÓN CAMPEONES DEL MUNDO</h6>
+          <img src="images/argentina/argentinaTitular.jpg" alt="" width="90px">
+        </div>
+
+
+        <div class="footballProduct">
+          <h6>CAMISETA VIOLETA SELECCIÓN ARGENTINA SUPLENTE</h6>
+          <img src="images/argentina/argentinaSuplente.jpg" alt="" width="90px">
+        </div>
+
+
+        <div class="footballProduct">
+          <h6>CAMISETA TITULAR BOCA JUNIORS TEMPORADA 22/23</h6>
+          <img src="images/boca/bocaTitular.jpg" alt="" width="90px">
+        </div>
+
+
+        <div class="footballProduct">
+          <h6>CAMISETA TITULAR RIVER PLATE TEMPORADA 22/23</h6>
+          <img src="images/river/riverTitular.jpg" alt="" width="90px">
+        </div>
+
+
+        <div class="footballProduct">
+          <h6>CAMISETA TITULAR INDEPENDIENTE TEMPORADA 22/23</h6>
+          <img src="images/independiente/independienteTitular.jpg" alt="" width="90px">
+        </div>
+
+
+        <div class="footballProduct">
+          <h6>CAMISETA TITULAR RACING TEMPORADA 22/23</h6>
+          <img src="images/racing/racingTitular.jpg" alt="" width="90px">
+        </div>
+
+
+        <div class="footballProduct">
+          <h6>CAMISETA TITULAR SAN LORENZO TEMPORADA 22/23</h6>
+          <img src="images/sanlorenzo/sanlorenzoTitular.jpg" alt="" width="90px">
+        </div>
 
 
 
+        <h2>SHORTS DE FÚTBOL</h2>
+
+
+        <div class="footballProduct">
+          <h6>SHORT SELECCIÓN ARGENTINA</h6>
+          <img src="images/argentina/argentinaShort.jpg" alt="" width="90px">
+        </div>
 
 
 
+        <div class="footballProduct">
+          <h6>SHORT BOCA JUNIORS</h6>
+          <img src="images/boca/bocaShort.jpg" alt="" width="90px">
+        </div>
+
+
+        <div class="footballProduct">
+          <h6>SHORT RIVER PLATE</h6>
+          <img src="images/river/riverShort.jpg" alt="" width="90px">
+        </div>
+
+
+        <div class="footballProduct">
+          <h6>SHORT INDEPENDIENTE</h6>
+          <img src="images/independiente/independienteShort.jpg" alt="" width="90px">
+        </div>
+
+
+        <div class="footballProduct">
+          <h6>SHORT RACING</h6>
+          <img src="images/racing/racingShort.jpg" alt="" width="90px">
+        </div>
 
 
 
+        <div class="footballProduct">
+          <h6>SHORT SAN LORENZO</h6>
+          <img src="images/sanlorenzo/sanlorenzoShort.jpg" alt="" width="90px">
+        </div>
 
 
-  <!-- FOOTER  -->
- <%- include('partials/footer')  %>
+      </main>
+
+
+      <!-- FOOTER  -->
+      <%- include('partials/footer') %>
