--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -1,24 +1,27 @@
-<!DOCTYPE html>
-<html lang="es">
-<%- include('partials/head'); %>
-<body>
-    <%- include('partials/header'); %>
-	
-	
-	<!-- Container -->
-	<div class="container" style="margin-top: 40px;">
-		<div class="row">
-			<div class="col-md-3">
-				<h2>Hi <%= user.fullName %></h2>
+<%- include('./partials/head') %>
+
+	<link rel="stylesheet" href="/css/userProfile.css">
+	<title>Perfil del usuario</title>
+	</head>
+
+	<body>
+
+		<!-- HEADER  -->
+		<%- include('./partials/header') %>
+
+			<main>
+				<div class="container">
+
+					<div class="profileUserName">
+						Hi <%= user.fullName %>
+						
+					</div>
+					<div class="profileUserEmail">
+						<%= user.email %>
+					</div>
 				
-				<br>
-				<br>
-				<div class="alert alert-success"><%= user.email %></div>
-			</div>
-		</div>
-	</div>
-	<!-- //Container -->
-	
-	<%- include('partials/footer'); %>
-</body>
-</html>
+				</div>
+			
+			</main>
+
+			<%- include('./partials/footer'); %>
