--- a/public/css/index.css
+++ b/public/css/index.css
@@ -14,7 +14,7 @@ body {
 
 header {
     padding: 5px;
-    background-color: #38b6ff;
+    background-color: #0A2647;
 
 }
 
@@ -39,7 +39,7 @@ header {
 }
 
 .search input {
-    color: #38b6ff;
+    color: #0A2647;
     border: 0px solid white;
     width: 100%;
     outline: none;
@@ -49,12 +49,12 @@ header {
 .search button {
     background-color: white;
     border: none;
-    color: #38b6ff;
+    color: #0A2647;
     width: 10%;
 }
 
 input::placeholder {
-    color: #38b6ff;
+    color: #0A2647;
 }
 
 .user-links {
@@ -116,7 +116,7 @@ h2 {
 
 
 .footballProduct {
-    background-color: #769fcd;
+    background-color: #0A2647;
     margin: 30px auto;
     width: 200px;
     height: 220px;
@@ -124,7 +124,13 @@ h2 {
     flex-wrap: wrap;
     min-width: 40%;
     justify-content: space-between;
+    transition: 400ms all ease;
 
+}
+
+.footballProduct:hover {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);  
+    transform: translateY(-5%);
 }
 
 .footballProduct h6 {
@@ -155,7 +161,7 @@ h2 {
 
 footer {
     width: 100%;
-    background-color: #38b6ff;
+    background-color: #0A2647;
     margin-top: auto;
 }
 
