--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -11,14 +11,14 @@
     width: 80%;
     display: flex;
     flex-direction: column;
-    background-color: #9d9a9a;
+    background-color: #0A2647;
     border-radius: 20px;
     margin-bottom: 50px;
     margin-top: 50px;
 }
 
 .product-img {
-    background-color: #9d9a9a;
+    background-color: #0A2647;
     justify-content: center;
     width: 70%;
     display: flex;
@@ -32,6 +32,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    color: white;
 }
 
 .buy-section {
@@ -40,11 +41,11 @@
     width: 80%;
     display: flex;
     flex-direction: column;
-    background-color: #9d9a9a;
+    background-color: #0A2647;
     border-radius: 20px;
     margin-bottom: 40px;
 }
-
+ 
 .detail-texts {
     flex-direction: column;
     margin: 0px ;
@@ -52,13 +53,13 @@
     text-align: center;
     justify-content: center;
     padding: 10px;
-    color: black;
+    color: white;
     
 }
 .detail-texts i {
     display: inline;
     padding-bottom: 10px;
-    color:#38b6ff
+    color: white
 
 }
 
@@ -73,8 +74,8 @@
     justify-content: center;
     border: none;
     outline: none;
-    color: white;
-    background-color: #38b6ff;
+    color: #0A2647;
+    background-color: white;
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 15px;
@@ -91,7 +92,7 @@
     justify-content: center;
     border: none;
     outline: none;
-    color: white;
+    color: #0A2647;
     background-color: rgb(248, 69, 37);
     border-radius: 10px;
     padding: 10px;
@@ -105,6 +106,7 @@
 
 .pay-text {
     display: none;
+    color: white;
 }
 
 @media (min-width: 769px) {
