--- a/public/css/index.css
+++ b/public/css/index.css
@@ -133,15 +133,15 @@ h2 {
     transform: translateY(-5%);
 }
 
-.footballProduct h6 {
+.footballProduct h6, a {
     position: relative;
     font-size: 10px;
     margin: auto 5px;
-    top: 10px;
     text-align: center;
     color: #f7fbfc;
     font-family: sans-serif;
     width: 100%;
+    text-decoration: none;
 
 }
 
@@ -152,10 +152,34 @@ h2 {
     margin: 10px auto;
     margin-top: 30px;
     width: 75%;
-    height: 158px;
-    max-height: 158px;
+    height: 155px;
+    max-height: 155px;
 }
 
+h2::after {
+    content: "";
+    display: block;
+    position: relative;
+    left: 0;
+    right: 0;
+    bottom: -1px;
+    height: 2px;
+    background-color: #0A2647;
+  }
+
+  main .footballProduct:hover .price-container {
+    height: 10px;
+    opacity: 1;
+    font-size: 15px;
+  }
+  
+  .footballProduct .price-container {
+    height: 0;
+    opacity: 0;
+    transition: opacity 550ms ease, height 550ms ease-out;
+    font-size: 15px;
+    
+  }
 
 /* FOOTER */
 
@@ -202,6 +226,195 @@ footer .brands a {
 .footer-links a {
     text-decoration: none;
     color: white;
+}
+
+.negroGlobal {
+    background-color: #100505
+}
+
+.celesteArg {
+    background-color: #60AFE1;
+}
+
+.violetaArg {
+    background-color: #353776;
+}
+
+.azulBoca {
+    background-color: #103f79;
+}
+
+.amarilloBoca {
+    background-color: #f3b229;
+}
+
+.rojoRiver {
+    background-color: #eb192e;
+}
+
+.rojoIndependiente {
+    background-color: #e2001a;
+}
+
+.celesteRacing {
+    background-color: #029cdc;
+}
+
+.bordoSanLorenzo {
+    background-color: #ec212d;
+}
+
+.azulSanLorenzo {
+    background-color: #273b56;
+}
+
+.rojoArgentinos {
+    background-color: #fb0b0e;
+    
+}
+
+.azulArgentinos {
+    background-color: #0d3e8a;
+}
+
+.celesteArsenal {
+    background-color: #25add7;
+}
+
+.rojoArsenal {
+    background-color: #ed2330;
+}
+
+.celesteAtleticoTucuman {
+    background-color: #62bcf1;
+}
+
+.azulAtleticoTucuman {
+    background-color: #344B7E;
+}
+
+.verdeBanfield {
+    background-color: #03953f;
+}
+
+.rojoBarracas {
+    background-color: #FC0204;
+}
+
+.blancoBarracas {
+    background-color: #FCFEFC;
+}
+
+.celesteBelgrano {
+    background-color: #16C1F3;
+}
+
+.negroBelgrano {
+    background-color: #30323A;
+}
+
+.negroCentralCordoba {
+    background-color: #000000;
+}
+
+.rojoCentralCordoba {
+    background-color: #A62727;
+}
+
+.rojoColon {
+    background-color: #e1171d;
+}
+
+.amarilloDefensa {
+    background-color: #D9B727;
+}
+
+.verdeDefensa {
+    background-color: #18443D;
+}
+
+.rojoEstudiantes {
+    background-color: #e40b12;
+}
+
+.azulGimnasia {
+    background-color: #09446a;
+}
+
+.azulGodoyCruz {
+    background-color: #002988;
+}
+
+.grisGodoyCruz {
+    background-color: #b4b0b2;
+}
+
+.rojoHuracan {
+   background-color: #C41B14;
+}
+
+.rojoInstituto {
+    background-color: #FA0202;
+}
+
+.bordoLanus {
+    background-color: #ab2a3e;
+}
+
+.rojoNewells {
+    background-color: #f42121;
+}
+
+.marronPlatense {
+    background-color: #5c3919;
+}
+
+.azulRosarioCentral {
+    background-color: #1F4972;
+}
+
+.amarilloRosarioCentral {
+    background-color: #f5c513;
+}
+
+.verdeSarmiento {
+    background-color: #056E35;
+}
+
+.verdesitoSarmiento {
+    background-color: #528F6B;
+}
+
+.azulTalleres {
+    background-color: #05173b;
+}
+
+.azul2Talleres {
+    background-color: #1A347D;
+}
+
+.azulTigre {
+    background-color: #2A3089;
+}
+
+.rojoTigre {
+    background-color: #B82D40;
+}
+
+.rojoUnion {
+    background-color: #df1216;
+}
+
+.azulUnion {
+    background-color: #052C91;
+}
+
+.azulVélez {
+    background-color: #0a539c;
+}
+
+.azul2Vélez {
+    background-color: #13378D;
 }
 
 @media (min-width: 769px) {
@@ -306,5 +519,4 @@ footer .brands a {
 
     }
 
-   
 }
