--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -1,51 +1,43 @@
 <!-- HEAD  -->
 <%- include('../partials/head') %>
 
-    <link href="/css/productEdit.css" rel="stylesheet">
-    <title>Edición de producto</title>
-    </head>
+<link href="/css/productEdit.css" rel="stylesheet">
+<title>Edición de producto</title>
+</head>
 
     <body>
-        
-            <main>
-                <div class="formBox">
-                    <h5>Editar producto</h5>
+        <!-- HEADER  -->
+        <%- include('../partials/header')  %>
+        <main>
+            <div class="formBox">
+                <h5>Editar producto</h5>
 
-                    <form action="/products" method="POST" autocomplete="off">
+                <form action="/products/<%= productToEdit.id %>?_method=PUT"   method="POST">
 
-                        <input class="inputs" type="text" name="name" placeholder="Edite el nombre del producto">
+                    <input value= "<%=productToEdit.name %>" class="inputs" type="text" name="name" placeholder="Edita el nombre del producto">
 
-                        <input class="inputs" type="number" name="price" min="1" placeholder="Edite el precio">
+                    <input value= "<%=productToEdit.price %>" class="inputs" type="number" name="price" min="1" placeholder="Edita el precio">
 
-                        <select class="selection" name="category">
-                            <option disabled selected="">Seleccione una categoría</option>
-                            <option>Gabinetes</option>
-                            <option>Almacenamiento</option>
-                            <option>Procesadores</option>
-                            <option>Placas de video</option>
-                            <option>Monitores</option>
-                            <option>Mouses</option>
-                            <option>Teclados</option>
-                            <option>Auriculares</option>
-                            <option>Micrófonos</option>
-                            <option>Web Cams</option>
-                            <option>Mandos</option>
-                            <option>Parlantes</option>
-                        </select>
+                    <select class="selection">
+                        <option <%= productToEdit.category === 'Seleccione una categoría' ? 'selected' : null %> value="Seleccione una categoría" disabled selected="">Seleccione una categoría</option>
+                        <option <%= productToEdit.category === 'Camiseta titular' ? 'selected' : null %> value="Camiseta titular">Camiseta titular</option>
+                        <option <%= productToEdit.category === 'Camiseta suplente' ? 'selected' : null %> value="Camiseta suplente">Camiseta suplente</option>
+                        <option <%= productToEdit.category === 'Short' ? 'selected' : null %> value="Short">Short</option>
+                        
+                    </select>
 
 
-                        <input class="inputs" type="text" name="brand" placeholder="Edita la marca">
+                   <input value= "<%=productToEdit.discount %>" class="inputs" type="number" name="discount" min="1" max="100" 
+                    placeholder="Edita el porcentaje del descuento">
 
-                        <input class="inputs" type="number" name="discount" min="1" max="100"
-                            placeholder="Edita el porcentaje del descuento">
+                   
+                    <button type="submit" class="buttons">Editar</button>
+                        
+                    
 
+                </form>
 
-                        <input class="inputs" id='inputImage' type="file" accept=".png, .jpg, .jpeg" name="image">
-
-                        <textarea name="description" class="textarea" placeholder="Edita la descripcion del producto"></textarea>
-
-                        <button type="submit" class="buttons">Editar</button>
-
-                    </form>
-                </div>
-            </main>
+            </div>
+        </main>
+    <!-- FOOTER  -->
+    <%- include('../partials/footer')  %>
