--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 html,
@@ -34,7 +35,7 @@ body {
 
 .allProducts-box .product h5 {
     text-align: center;
-    font-size: 10px;
+    font-size: 12px;
     width: 90%;
     margin: 10px;
 }
@@ -44,23 +45,33 @@ body {
     display: flex;
     justify-content: space-around;
     margin: 10px auto;
-    width: 80%;
+    width: 90%;
+    flex-direction: column;
 }
 
 .allProducts-box .product img {
-    width: 40%;
+    width: 90%;
+    justify-content: center;
+    text-align: center;
+    margin: auto;
+    
 
 }
 
 .allProducts-box .product .paragraphs-texts {
-    width: 50%;
-
-
+    width: 90%;
+    display: block;
+    text-align: left;
 }
 
 .allProducts-box .product p {
     margin: 30px 0;
     font-weight: 500;
+
+}
+
+.allProducts-box .product #price-before {
+    text-decoration: line-through;
 
 }
 
@@ -74,9 +85,10 @@ body {
     outline: none;
     padding: 10px;
     border-radius: 5px;
-    color: 0A2647;
+    color: #0A2647;
     cursor: pointer;
     max-height: 35.33px;
+    cursor: pointer;
 
 }
 
@@ -85,12 +97,15 @@ body {
 }
 
 
-.allProducts-box #buy-zone {
-    padding: 5px;
-    font-size: 80%;
-
+.allProducts-box #buy-zone p {
+    margin: 10px;
+    margin-bottom: 35px;
+    font-size: 14px;
 }
 
+.allProducts-box #discount-porcentage {
+    color: #17ff36;
+}
 
 
 @media (min-width: 769px) {
@@ -126,20 +141,20 @@ body {
     }
 
     .allProducts-box .product img {
-        height: 184.87px;
+        height: 300px;
     }
 
     .product .paragraphs-texts {
         font-size: 20px;
     }
 
-    .allProducts-box #buy-zone {
-        margin-bottom: 0;
-
-    }
-
     .allProducts-box #buy-zone p {
-        font-size: 14px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        text-align: center;
+        font-size: 20px;
     }
 
     footer {
