--- a/views/products/productCart.ejs
+++ b/views/products/productCart.ejs
@@ -4,9 +4,10 @@
     <title>Carrito de compras</title>
     </head>
 
-        <!-- HEADER  -->
-        <%- include('../partials/header') %>
-    <body>
+    <!-- HEADER  -->
+    <%- include('../partials/header') %>
+
+        <body>
 
 
             <main>
@@ -15,33 +16,38 @@
                     <div class="allProducts-box">
 
                         <div class="product">
-                            <h5>CAMISETA TITULAR BOCA JUNIORS TEMPORADA 22/23</h5>
+                            <h5>
+                                <%= product.name %>
+                            </h5>
                             <div class="img-p-container">
-                                <img src="images/boca/bocaTitular.jpg" alt="" width="90px">
+                                <img src="/images/<%= product.image %>" alt="<%= product.name %>" width="90px">
                                 <div class="paragraphs-texts">
-                                    <p>CANTIDAD 1</p>
-                                    <p>PRECIO $16.999</p>
-                                </div>
-                            </div>
-                            <input class="delete-button" value="ELIMINAR EL PRODUCTO"></input>
-                        </div>
+                                    <p> CANTIDAD 1</p>
+                                    <% if(product.discount> 0) { %>
+                                        <article class="product-discount">
+                                            <h4 id="discount-porcentage">
+                                                <%= product.discount %>% de descuento!
+                                            </h4>
+                                            <p id="price-before"> Precio anterior: $<%= product.price%>
+                                            </p>
+                                            <h4 id="discount-porcentage"> Precio ahora: $<%= product.price -
+                                                    (product.price*product.discount)/100 %>
+                                            </h4>
+                                        </article>
+                                        <% } %>
+                                            </p>
 
-                        <div class="product">
-                            <h5>CAMISETA SUPLENTE BOCA JUNIORS TEMPORADA 22/23</h5>
-                            <div class="img-p-container">
-                                <img src="images/boca/bocaSuplente.jpg" alt="" width="90px">
-                                <div class="paragraphs-texts">
-                                    <p>CANTIDAD 1</p>
-                                    <p>PRECIO $16.999</p>
                                 </div>
                             </div>
                             <input class="delete-button" value="ELIMINAR EL PRODUCTO"></input>
                         </div>
 
                         <div class="product" id="buy-zone">
-                            <p>PRECIO TOTAL DE LOS ARTÍCULOS: <strong>$33.998</strong></p>
+                            <p>PRECIO TOTAL DE LOS ARTÍCULOS: <strong>$<%= product.price -
+                                        (product.price*product.discount)/100 %> </strong></p>
                             <p>PRECIO DE ENVÍO: <strong>$1.299</strong></p>
-                            <p>PRECIO TOTAL: <strong>$35.297</strong></p>
+                            <p>PRECIO TOTAL: <strong>$ <%= product.price - (product.price*product.discount)/100 + 1299
+                                        %></strong></p>
                             <input class="delete-button" value="PROCEDER A PAGAR"></input>
 
                         </div>
@@ -53,6 +59,5 @@
 
 
             </main>
- <!-- FOOTER  -->
- <%- include('../partials/footer') %>
-
+            <!-- FOOTER  -->
+            <%- include('../partials/footer') %>
