--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -15,6 +15,10 @@
                         <div class="product-name">
                             <h3> <%= product.name %> </h3>
                         </div>
+                        
+                        <div class="product-price">
+                            <h3> Precio del producto: $<%= product.price %> </h3>
+                        </div>
 
                         <div class="product-img">
                             <img src="/images/<%= product.image %>" alt="<%= product.name %>">
@@ -35,7 +39,7 @@
 
                             <div class="buy-buttons">
                                 <a href="/products/product-edit/<%=product.id %>" id="product-redirect"><input class="product-detail-button" type="submit" value="Editar"></a>
-                    <input class="product-detail-button" type="submit" value="Comprar">
+                                <a href="/products/product-cart/<%=product.id %>" id="product-redirect"><input class="product-detail-button" type="submit" value="Comprar">
                     <form action="/products/delete/<%= product.id %>?_method=DELETE" method="POST">
                         <input class="product-detail-button" type="submit" value="Borrar" id="delete-button"></input>
                       </form>
