--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,6 +13,7 @@ body {
 button {
     cursor: pointer;
 }
+
 /* HEADER */
 
 header {
@@ -92,7 +93,8 @@ input::placeholder {
 
 /* HEADER  IF USER IS LOGGED */
 
-.nav-loggedOptions, .nav-loggedOptions a {
+.nav-loggedOptions,
+.nav-loggedOptions a {
     display: flex;
     flex-direction: column;
     margin: 10px;
@@ -120,24 +122,27 @@ h2 {
 
 
 .footballProduct {
-    background-color: #0A2647;
+    background-color: #0A2647;;
+    border-radius: 20px;
     margin: 30px auto;
     width: 220px;
     height: 260px;
     display: flex;
     flex-wrap: wrap;
     min-width: 40%;
+    border: 2px solid #c3c6ce;
     justify-content: space-between;
-    transition: 400ms all ease;
+    transition: 0.5s ease-out;
+    overflow: visible;
 
 }
 
 .footballProduct:hover {
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);  
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
     transform: translateY(-5%);
 }
 
-.footballProduct h6, a {
+.footballProduct h6 {
     position: relative;
     font-size: 13px;
     margin: auto;
@@ -170,40 +175,47 @@ h2::after {
     bottom: -1px;
     height: 2px;
     background-color: #0A2647;
-  }
-
-  main .footballProduct:hover .price-container {
-    height: 10px;
-    opacity: 1;
-    font-size: 15px;
-  }
-  
-  .footballProduct .price-container {
-    height: 0;
-    opacity: 0;
-    transition: 550ms ease-in-out;
-    font-size: 15px;
-    color: #17ff36
 }
+
+.footballProduct .detail-container {
+    transform: translate(-50%, 125%);
+    width: 60%;
+    border-radius: 1rem;
+    border: none;
+    color: #fff;
+    font-size: 1rem;
+    padding: .5rem 1rem;
+    position: relative;
+    left: 50%;
+    bottom: 0;
+    opacity: 0;
+    transition: 0.3s ease-out;
+    text-decoration: none;
+    text-align: center;
+    font-family: sans-serif;
+
+}
+
+.footballProduct:hover {
+   box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+   }
+   
+   .footballProduct:hover .detail-container {
+    transform: translate(-50%, 50%);
+    opacity: 1;
+   }
 
 /* FOOTER */
 
 footer {
-    width: calc(100% + 10px);    
+    width: calc(100% + 10px);
     background-color: #0A2647;
-    margin-top: auto;
+    margin-top: 50px;
 }
 
 footer .brand {
     padding: 5px;
 
-}
-
-footer .links {
-    width: 100%;
-    font-size: 10px;
-    display: flex;
-    justify-content: space-around;
 }
 
 footer .brands {
@@ -220,19 +232,15 @@ footer .brands a {
 
 }
 
-.footer-links {
+
+.footer-links, .footer-links a  {   
     display: flex;
-    margin-right: 2%;
-    margin-bottom: 15px;
-    
-
-}
-
-.footer-links a {
     text-decoration: none;
     color: white;
     font-size: 12px;
     justify-content: space-around;
+    text-align: center;
+    text-decoration: none;
 }
 
 .negroGlobal {
@@ -277,7 +285,7 @@ footer .brands a {
 
 .rojoArgentinos {
     background-color: #fb0b0e;
-    
+
 }
 
 .azulArgentinos {
@@ -357,7 +365,7 @@ footer .brands a {
 }
 
 .rojoHuracan {
-   background-color: #C41B14;
+    background-color: #C41B14;
 }
 
 .rojoInstituto {
@@ -477,13 +485,14 @@ footer .brands a {
         min-width: 30%;
     }
 
-    .footballProduct h6, a {
+    .footballProduct h6,
+    a {
         margin: 5px 3px;
     }
-        
-    
 
-        
+
+
+
     /* FOOTER */
 
     footer .brand {
@@ -506,22 +515,23 @@ footer .brands a {
         width: 37%;
     }
 
-     
+
     /* MAIN */
     .footballProduct {
         min-width: 23%;
     }
 
-    .footballProduct h6, a {
+    .footballProduct h6,
+    a {
         margin: 5px 7px;
     }
 
     /* FOOTER  */
-    .footer-links a{
+    .footer-links a {
         font-size: large;
     }
 
-    footer .brands i{
+    footer .brands i {
         font-size: xx-large;
     }
 
@@ -543,4 +553,3 @@ footer .brands a {
     }
 
 }
-
