--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -60,6 +60,10 @@
     border-radius: 20px;
     margin-bottom: 90px;
 }
+
+.buy-section a {
+    text-decoration: none;
+}
  
 .detail-texts {
     flex-direction: column;
@@ -127,194 +131,6 @@
     color: white;
 }
 
-.negroGlobal {
-    background-color: #100505
-}
-
-.celesteArg {
-    background-color: #60AFE1;
-}
-
-.violetaArg {
-    background-color: #353776;
-}
-
-.azulBoca {
-    background-color: #103f79;
-}
-
-.amarilloBoca {
-    background-color: #f3b229;
-}
-
-.rojoRiver {
-    background-color: #eb192e;
-}
-
-.rojoIndependiente {
-    background-color: #e2001a;
-}
-
-.celesteRacing {
-    background-color: #029cdc;
-}
-
-.bordoSanLorenzo {
-    background-color: #ec212d;
-}
-
-.azulSanLorenzo {
-    background-color: #273b56;
-}
-
-.rojoArgentinos {
-    background-color: #fb0b0e;
-    
-}
-
-.azulArgentinos {
-    background-color: #0d3e8a;
-}
-
-.celesteArsenal {
-    background-color: #25add7;
-}
-
-.rojoArsenal {
-    background-color: #ed2330;
-}
-
-.celesteAtleticoTucuman {
-    background-color: #62bcf1;
-}
-
-.azulAtleticoTucuman {
-    background-color: #344B7E;
-}
-
-.verdeBanfield {
-    background-color: #03953f;
-}
-
-.rojoBarracas {
-    background-color: #FC0204;
-}
-
-.blancoBarracas {
-    background-color: #FCFEFC;
-}
-
-.celesteBelgrano {
-    background-color: #16C1F3;
-}
-
-.negroBelgrano {
-    background-color: #30323A;
-}
-
-.negroCentralCordoba {
-    background-color: #000000;
-}
-
-.rojoCentralCordoba {
-    background-color: #A62727;
-}
-
-.rojoColon {
-    background-color: #e1171d;
-}
-
-.amarilloDefensa {
-    background-color: #D9B727;
-}
-
-.verdeDefensa {
-    background-color: #18443D;
-}
-
-.rojoEstudiantes {
-    background-color: #e40b12;
-}
-
-.azulGimnasia {
-    background-color: #09446a;
-}
-
-.azulGodoyCruz {
-    background-color: #002988;
-}
-
-.grisGodoyCruz {
-    background-color: #b4b0b2;
-}
-
-.rojoHuracan {
-   background-color: #C41B14;
-}
-
-.rojoInstituto {
-    background-color: #FA0202;
-}
-
-.bordoLanus {
-    background-color: #ab2a3e;
-}
-
-.rojoNewells {
-    background-color: #f42121;
-}
-
-.marronPlatense {
-    background-color: #5c3919;
-}
-
-.azulRosarioCentral {
-    background-color: #1F4972;
-}
-
-.amarilloRosarioCentral {
-    background-color: #f5c513;
-}
-
-.verdeSarmiento {
-    background-color: #056E35;
-}
-
-.verdesitoSarmiento {
-    background-color: #528F6B;
-}
-
-.azulTalleres {
-    background-color: #05173b;
-}
-
-.azul2Talleres {
-    background-color: #1A347D;
-}
-
-.azulTigre {
-    background-color: #2A3089;
-}
-
-.rojoTigre {
-    background-color: #B82D40;
-}
-
-.rojoUnion {
-    background-color: #df1216;
-}
-
-.azulUnion {
-    background-color: #052C91;
-}
-
-.azulVélez {
-    background-color: #0a539c;
-}
-
-.azul2Vélez {
-    background-color: #13378D;
-}
 
 @media (min-width: 769px) {
     .detail-product {
