--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -11,7 +11,7 @@
 
             <main>
                 <article class="detail-product">
-                    <div class="color-container <%= product.color %>">
+                    <div class="color-container">
                         <div class="product-name">
                             <h3> <%= product.name %> </h3>
                         </div>
